fix: fix the uploading pic z-index error

--- a/src/components/TopUserSection/TopUserSection.module.scss
+++ b/src/components/TopUserSection/TopUserSection.module.scss
@@ -23,6 +23,7 @@
   &Banner {
     width: 639px;
     height: 200px;
+    object-fit: cover;
   }
 
   // 大頭照
@@ -33,6 +34,7 @@
     width: 140px;
     height: 140px;
     border-radius: 50%;
+    object-fit: cover;
     border: 4px solid #ffffff;
   }
 
@@ -180,6 +182,7 @@
   &BackgroundImage {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     filter: brightness(50%);
   }
 
@@ -200,6 +203,7 @@
   z-index: 999;
   top: 184px;
   left: 70px;
+  width: 40px;
   opacity: 0;
 }
 
@@ -207,7 +211,8 @@
   position: absolute;
   z-index: 999;
   top: 90px;
-  right: 100px;
+  left: 255px;
+  width: 40px;
   opacity: 0;
 }
 
